added enemy sprites, floor class and updated world prop creation

--- a/src/main/resources/game-properties.yml
+++ b/src/main/resources/game-properties.yml
@@ -1,10 +1,10 @@
 #Display Settings
 TileSize: 64
-Clamp: false
+Clamp: true
 ScreenWidth: 1280
 ScreenHeight: 720
 ScreenScale: 1
-ShowCollisionMask: true
+ShowCollisionMask: false
 
 #Player Settings
 PlayerMaxLife: 100
